hphp/hack/test/typecheck/ffp/function_private_bad.php
<?hh // partial
// Copyright 2004-present Facebook. All Rights Reserved.

async private function foo(): void {
}
